# api_pandas

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: manage.py
app/api_pandas/: asgi.py  settings.py  urls.py  wsgi.py
app/core/fixtures/: people.json
app/people/: helpers.py  models.py  serializers.py  urls.py  views.py
app/people/migrations/: 0001_initial.py
doc/: API_Pandas test.docx
